# k8s-operator-generator

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .openapi-generator-ignore  .prettierrc.yaml  .releaserc.yaml  .spectral.yaml  404.html  CHANGELOG.md  Cargo.toml  Dockerfile  Makefile  README.md  Taskfile.yaml  build.rs  bump-version.sh  cluster.yaml  configuration.html  contributing.html  cspell.config.yaml  examples.html  getting_started.html  index.html  introduction.html  launch.json.example  license.html  openapi.yaml  print.html  searchindex.js  searchindex.json  toc.html  toc.js  usage.html
.cargo/: config.toml
.devcontainer/: .zshrc  Dockerfile  deps.sh  devcontainer.json  launch.json  setup-git.sh
.github/: PULL_REQUEST_TEMPLATE.md  release.yml
.github/workflows/: ci.yml  docs.yml  release.yml
cli/: Cargo.toml
cli/src/: cli.rs  config.rs  errors.rs  lib.rs  main.rs  templates.rs  utils.rs
cli/src/commands/: generate.rs  hydrate.rs  init.rs  mod.rs
cli/templates/: .cargo_config.toml.jinja  .devcontainer_deps.sh.jinja  .devcontainer_devcontainer.json.jinja  .devcontainer_launch.json.example.jinja  .devcontainer_launch.json.jinja  .devcontainer_setup-git.sh.jinja  .dockerignore.jinja  .editorconfig.jinja  .env.example.jinja  .gitattributes.jinja  .gitignore.jinja  .prettierrc.jinja  .prettierrc.yaml.jinja  .rustfmt.toml.jinja  cargo.toml.jinja  cluster.yaml.jinja  dockerfile.jinja  k8s_crdgen_cargo.toml.jinja  k8s_crdgen_main.jinja  k8s_operator_cargo.toml.jinja  k8s_operator_controller.jinja  k8s_operator_controller_action_delete.jinja  k8s_operator_lib.jinja  k8s_operator_main.jinja  k8s_operator_type.jinja  k8s_operator_type.rs.jinja  k8s_tests_cargo.toml.jinja  k8s_tests_main.jinja  k8s_tests_main.rs.jinja  k8s_tests_utils_client.jinja  k8s_tests_utils_cluster.jinja  k8s_tests_utils_cluster.rs.jinja  k8s_tests_utils_operator.jinja  manifest_example.jinja  manifest_operator_deployment.jinja  manifest_rbac_cluster_role.jinja  manifest_rbac_cluster_role_binding.jinja  manifest_rbac_cluster_role_binding.yaml.jinja  manifest_rbac_role_binding.jinja  manifest_rbac_service_account.jinja  (+3 more)
cli/templates/.devcontainer/: deps.sh.jinja  devcontainer.json.jinja  dockerfile.jinja  launch.json.jinja  zshrc.jinja
cli/templates/crdgen/: cargo.toml.jinja
cli/templates/manifests/: operator_deployment.yaml.jinja  operator_secret.yaml.jinja  rbac_role.yaml.jinja  rbac_service_account.yaml.jinja
cli/templates/operator/: cargo.toml.jinja  cli.rs.jinja  controller.rs.jinja  controller_action_create.jinja  controller_action_delete.jinja  controller_action_update.jinja  errors.rs.jinja  lib.rs.jinja  main.rs.jinja  type.rs.jinja
cli/templates/tests/: utils_client.rs.jinja
cli/tests/: config.rs  generate_command.rs  hydrate_command.rs  init_command.rs  utils.rs
cli/tests/snapshot/: mod.rs  templates_env_example.rs  templates_operator_cargo_toml.rs  templates_operator_cli.rs  templates_operator_controller.rs  templates_operator_lib.rs  templates_operator_main.rs  templates_operator_type.rs
cli/tests/snapshot/snapshots/: snapshot__templates_env_example__render_env_example.snap  snapshot__templates_env_example__render_env_example_with_empty_string.snap  snapshot__templates_operator_cargo_toml__render.snap  snapshot__templates_operator_cli__render.snap  snapshot__templates_operator_controller__render.snap  snapshot__templates_operator_lib__render.snap  snapshot__templates_operator_main__main_template.snap  snapshot__templates_operator_main__main_template.snap.new  snapshot__templates_operator_main__render.snap  snapshot__templates_operator_main__render_with_controllers.snap  snapshot__templates_operator_main__render_with_controllers_and_types.snap  snapshot__templates_operator_main__render_with_types.snap  snapshot__templates_operator_main__render_without_controllers_or_types.snap  snapshot__templates_operator_type__render_basic_type.snap  snapshot__templates_operator_type__render_complex_type.snap
cli/tests/unit/: config.rs  generate_command.rs  hydrate_command.rs  init_command.rs  mod.rs
cli/tests/utils/: mod.rs
client/: Cargo.toml  README.md
client/.openapi-generator/: FILES
client/docs/: Cat.md  CatsApi.md  DefaultApi.md  Dog.md  DogsApi.md  HorsesApi.md
codegen/: main.rs
crates/client-sdk/: .openapi-generator-ignore  Cargo.toml  README.md
crates/k8s-codegen/: Cargo.toml
crates/k8s-crdgen/: Cargo.toml
crates/k8s-operator/: Cargo.toml
crates/k8s-operator/src/: lib.rs  main.rs
crates/k8s-operator/src/controllers/: cats.rs  dogs.rs  horses.rs  mod.rs
crates/k8s-operator/src/types/: cat.rs  catresponse.rs  dog.rs  horse.rs
docs/: README.md  book.toml
docs/.openapi-generator/: FILES
fake-server/: Cargo.toml  README.md  data.json  db.js  package-lock.json  package.json
hooks/: pre-commit
scripts/: bump-version.sh  install-git-hooks.sh  install.sh  uninstall-git-hooks.sh
src/: crdgen.rs  lib.rs  main.rs
templates/: controller.jinja  controller_action_delete.jinja  controller_action_post.jinja  controller_action_put.jinja  crdgen.jinja  lib.jinja  main.jinja  manifest_example.jinja  manifest_operator_deployment.jinja  manifest_rbac_cluster_role.jinja  manifest_rbac_role.jinja  manifest_rbac_role_binding.jinja  type.jinja
tests/: Cargo.toml
tests/src/: main.rs
tests/src/utils/: cluster.rs  mod.rs  operator.rs
(+103 files in other folders)
