[package]
name = "k8s_operator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cats_api_client = { path = "./client" }
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
schemars = "0.8.12"
k8s-openapi = { version = "0.18.0", features = ["v1_26"] }
kube = { version = "0.82.2", default-features = false, features = ["rustls-tls", "config", "client", "runtime", "derive"] }
kube-derive = "0.82.2"
kube-runtime = "0.82.2"
serde = { version = "1.0.160", features = ["derive"] }
serde_derive = "1.0.160"
serde_json = "1.0.96"
serde_yaml = "0.9.21"
anyhow = "1.0.70"
futures-util = "0.3.28"
log = "0.4.17"
env_logger = "0.10.0"

[[bin]]
name = "operator"
path = "src/main.rs"

[[bin]]
name = "generate-crds"
path = "src/crdgen.rs"

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"
