[package]
name = "kopgen"
version = "1.11.0"
edition = "2021"
description = "Generate the Kubernetes operator rust code and manifests from the OpenAPI spec"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openapiv3 = "2.0.0"
serde_json = "1.0.96"
serde = { version = "1.0.160", features = ["derive"] }
serde_derive = "1.0.160"
serde_yaml = "0.9.21"
Inflector = "0.11.4"
askama = "0.12.1"
log = "0.4.17"
env_logger = "0.11.3"
clap = { version = "4.5.4", features = ["cargo", "derive", "env"] }
indexmap = { version = "2.6.0", features = ["serde"] }
thiserror = "2.0.3"
dotenvy = "0.15.7"

[dev-dependencies]
assert_cmd = "2.0"
tempfile = "3.3"
predicates = "3.1.2"
serial_test = "3.1.1"
mockall = "0.13"
insta = { version = "1.41.1", features = ["yaml"] }

[[test]]
name = "unit"
path = "tests/unit/mod.rs"

[[test]]
name = "snapshot"
path = "tests/snapshot/mod.rs"
