[package]
name = "k8s_operator"
version = "0.1.0"
edition = "2021"
description = "The Kubernetes Operator"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openapi = { path = "../client-sdk" }
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
schemars = "0.8.12"
k8s-openapi = { version = "0.23.0", features = ["v1_26"] }
kube = { version = "0.96.0", default-features = false, features = [
    "rustls-tls",
    "config",
    "client",
    "runtime",
    "derive",
] }
kube-derive = "0.96.0"
kube-runtime = "0.96.0"
serde = { version = "1.0.160", features = ["derive"] }
serde_derive = "1.0.160"
serde_json = "1.0.96"
serde_yaml = "0.9.21"
anyhow = "1.0.70"
futures-util = "0.3.28"
log = "0.4.17"
env_logger = "0.11.3"
reqwest = "0.12.4"
warp = "0.3"
futures = "0.3.30"
thiserror = "1.0.58"
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
mockall = "0.13.0"

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"
